--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 body {
-    background: linear-gradient(#e66465, #9198e5);;
+    background: linear-gradient(#e2d4d4, #9198e5);;
   }
   
   h1 {
     /*color: navy;*/
     /*color: linear-gradient(orange, purple);*/
     font-family: Arial, Helvetica, sans-serif;
-    color:aliceblue;
+    color:rgb(255, 255, 255);
     margin-left: 20px;
     /*background: linear-gradient(blue, yellow);*/
   }
