--- a/Personal Website/style.css
+++ b/Personal Website/style.css
@@ -2,6 +2,7 @@
 .topnav {
     background-color: #000000;
     overflow: hidden;
+    font-family: sans-serif;
   }
   
 /* Style the links inside the navigation bar */
@@ -11,7 +12,7 @@
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 17px;
+    font-size: 20px;
 }
 
 /* Change the color of links on hover */
@@ -26,3 +27,29 @@
     color: white;
 }
 
+body {
+    background: #e5e5e5;
+    }
+
+img {
+        padding-top: 50px;
+        border-radius: 50%;
+        width: 500px;
+        height: 500px;
+      }
+
+
+h1 {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+}
+
+.center {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
+      }
