--- a/Personal Website/style.css
+++ b/Personal Website/style.css
@@ -44,12 +44,22 @@ body {
 
     }
 
+#circle{
 
+
+    border-radius: 50%;
+
+}
+
+#bigger {
+    font-size: 40px;
+
+
+}
 
 img {
         padding-top: 50px;
         padding-bottom: 50px;
-        border-radius: 50%;
         max-width: 500px;
         max-height: 500px;
         text-align: center;
@@ -73,7 +83,10 @@ h1 {
         width: 50%;
       }
 
+#stupid{
+    position:absolute;
 
+}
 .picture {
         display: table; margin: 0 auto;
         margin: 0 2px;
@@ -99,6 +112,7 @@ h1 {
 
 }
 
+
 .Textstuff {
     animation-name:Text-Appearing;
     animation-duration: 8s;
@@ -107,5 +121,33 @@ h1 {
 
 h1 {
     margin-left: 10px;
+
+}
+
+#resume {
+
+    min-height: 1000px;
+    min-width: 750px;
+
+
+
+
+}
+
+#paragraph {
+    padding-left: 100px;
+    padding-right: 100px;
+
+
+
+
+
+}
+
+#me {
+
+    height: 400px;
+    width: 400px;
+
 
 }
